--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -231,8 +231,8 @@
     "CEC_JOB": "Corporate Coach / Independent Consultant / Trainer | ACC",
     "UBSI_JOB1": "Owner & Co-founder | ENIOKA",
     "UBSI_JOB2": "Director of the development entity | ENIOKA",
-    "CONT_JOB1": "Consultant DevSecOps | Capgemini",
-    "CONT_JOB2": "Consultant DevOps | Octo Technology",
+    "CONT_JOB1": "Global Cloud Security Architect at Pluxee",
+    "CONT_JOB2": "Lead Senior SRE at Jump",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Group Cloud & Infrastructure Director | SUEZ",
     "SOAR_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
@@ -245,7 +245,7 @@
     "ACOO_JOB2": "Software Engineer | Lalilo",
     "NLPF_JOB": "Agile Coach | Groupe Renault",
     "DEVO_JOB": "DevOps Consultant | Octo Technology",
-    "DSO_JOB": "Consultant DevSecOps | Capgemini",
+    "DSO_JOB": "Global Cloud Security Architect at Pluxee",
     "ACCC_JOB": "Olivier Girard's Chief of Staff | Accenture France",
     "INNO_JOB": "Talent & leadership consulting | Korn Ferry",
     "PMDE_JOB": "Product manager | Fintech Blockchain",
