--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -231,21 +231,21 @@
     "CEC_JOB": "Corporate Coach / Consultant indépendant / Formateur | ACC",
     "UBSI_JOB1": "Président & Co-fondateur | ENIOKA",
     "UBSI_JOB2": "Directeur de l'entité de développement Haute Couture | ENIOKA",
-    "CONT_JOB1": "Consultant DevSecOps | Capgemini",
-    "CONT_JOB2": "Consultant DevOps | Octo Technology",
+    "CONT_JOB1": "Global Cloud Security Architect at Pluxee",
+    "CONT_JOB2": "Lead Senior SRE at Jump",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
     "SOAR_JOB1": "Directeur de la pratique du cloud hybride  à l'échelle mondiale | Hewlett Packard Enterprise",
     "SOAR_JOB2": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
-    "SOCRA_JOB1": "Consultant DevOps | Octo Technology",
+    "SOCRA_JOB1": "Lead Senior SRE at Jump",
     "SOCRA_JOB2": "Ingénieur Logiciel | bettermarks GmbH",
     "MEPA_JOB1": "Consultant Senior | Octo Technology",
     "MEPA_JOB2": "Chef de Projet Digital | Octo Technology",
     "ACOO_JOB1": "Coach Agile | Groupe Renault",
     "ACOO_JOB2": "Developpeur Logiciel | Lalilo",
     "NLPF_JOB": "Coach Agile | Groupe Renault",
-    "DEVO_JOB": "Consultant DevOps | Octo Technology",
-    "DSO_JOB": "Consultant DevSecOps | Capgemini",
+    "DEVO_JOB": "Lead Senior SRE at Jump",
+    "DSO_JOB": "Global Cloud Security Architect at Pluxee",
     "ACCC_JOB": "Directeur de cabinet d'Olivier Girard | Accenture France",
     "INNO_JOB": "Conseil en Talent et Leadership | Korn Ferry",
     "PMDE_JOB": "Chef de produit | Fintech Blockchain",
